--- a/eng/pipelines/ci-gotest.yml
+++ b/eng/pipelines/ci-gotest.yml
@@ -28,23 +28,28 @@ pr:
       - packages/naming.go
       - packages/typespec-go
 
-jobs:
-  - job: "AutoRest_Go_CI"
-    displayName: "Run AutoRest CI Checks"
+extends:
+  template: /eng/pipelines/templates/stages/1es-redirect.yml
+  parameters:
+    Use1ESOfficial: false
+    stages:
+      - stage: "AutoRest_Go_CI"
+        jobs:
+          - job: "AutoRest_Go_CI"
+            displayName: "Run AutoRest CI Checks - go1.21"
 
-    strategy:
-      matrix:
-        Linux_Go121:
-          vm.image: "ubuntu-22.04"
-          go.version: "1.21.4"
+            variables:
+              - template: /eng/pipelines/templates/variables/image.yml
 
-    pool:
-      vmImage: "$(vm.image)"
+            pool:
+              name: "$(LINUXNEXTPOOL)"
+              image: "$(LINUXNEXTVMIMAGE)"
+              os: linux
 
-    steps:
-      - template: ../steps/set-env.yaml
-        parameters:
-          NodeVersion: "18.x"
-          GoVersion: "$(go.version)"
+            steps:
+              - template: /eng/pipelines/templates/steps/set-env.yaml
+                parameters:
+                  NodeVersion: "18.x"
+                  GoVersion: "1.21.4"
 
-      - template: ../steps/build-test-gotest.yaml
+              - template: /eng/pipelines/templates/steps/build-test-gotest.yaml
