--- a/eng/steps/build-test-go.yaml
+++ b/eng/steps/build-test-go.yaml
@@ -14,12 +14,15 @@ steps:
     workingDirectory: $(System.DefaultWorkingDirectory)/packages/autorest.go
 
   - script: |
-      rush regenerate
+      $currentVersion = node -p -e "require('package.json').version";
+      npm pack
+      rush regenerate --use-package=$(System.DefaultWorkingDirectory)/packages/autorest.go/autorest-go-$currentVersion.tgz
+      cd test
       rush modtidy 2>&1
       git add -A .
       git diff --staged -w 1>&2
     displayName: "Regenerate Autorest Tests"
-    workingDirectory: $(System.DefaultWorkingDirectory)/packages/autorest.go/test
+    workingDirectory: $(System.DefaultWorkingDirectory)/packages/autorest.go
     failOnStderr: true
 
   - script: |
