--- a/eng/steps/build-test-go.yaml
+++ b/eng/steps/build-test-go.yaml
@@ -14,7 +14,7 @@ steps:
     workingDirectory: $(System.DefaultWorkingDirectory)/packages/autorest.go
 
   - script: npm pack
-    displanName: "Create npm tarball"
+    displayName: "Create npm tarball"
     workingDirectory: $(System.DefaultWorkingDirectory)/packages/autorest.go
 
   - script: |
