--- a/packages/typespec-go/package.json
+++ b/packages/typespec-go/package.json
@@ -66,7 +66,7 @@
     "@azure-tools/codegen": "~2.9.2",
     "@azure-tools/linq": "~3.1.0",
     "@azure-tools/typespec-azure-core": ">=0.41.0 <1.0.0",
-    "@azure-tools/typespec-client-generator-core": "0.42.0-dev.10",
+    "@azure-tools/typespec-client-generator-core": "0.41.5",
     "@typespec/compiler": ">=0.55.0 <1.0.0",
     "@typespec/http": ">=0.55.0 <1.0.0",
     "@typespec/rest": ">=0.55.0 <1.0.0",
