--- a/eng/pipelines/publish-release-gotest.yml
+++ b/eng/pipelines/publish-release-gotest.yml
@@ -5,12 +5,12 @@ pool:
   vmImage: "ubuntu-22.04"
 
 steps:
-  - template: ../steps/set-env.yaml
+  - template: /eng/pipelines/templates/steps/set-env.yaml
     parameters:
       NodeVersion: "18.x"
       GoVersion: "1.21.4"
 
-  - template: ../steps/build-test-gotest.yaml
+  - template: /eng/pipelines/templates/steps/build-test-gotest.yaml
 
   - pwsh: |
       $currentVersion = node -p -e "require('./packages/autorest.gotest/package.json').version";
